Move memory management to vm_server. Work on memory allocation interfaces.

--- a/src/README
+++ b/src/README
@@ -1,1 +1,6 @@
 To build Metta type ./waf in current directory.
+
+
+-- misc --
+
+When you send multiple or big files to someone, they will be transparently compressed into a vxa archive with decoder for recipient's architecture(s) embedded, and then transparently uncompressed at the receiving side.
