--- a/docs/TODO
+++ b/docs/TODO
@@ -1,3 +1,9 @@
+ ✔ Setup UEFI boot emulator @done (14-05-26 13:54)
+   ✔ OVMF from http://sourceforge.net/apps/mediawiki/tianocore/index.php?title=OVMF @done (14-05-26 13:54)
+     ✔ qemu-system-x86_64 -pflash OVMF.fd @done (14-05-26 13:54)
+   ✔ VirtualBox too @done (14-05-26 13:54)
+ ☐ ACPI tables parsing?
+
 Module loader:
  ☐ Implement separating code, data and bss sections into different privileged stretches.
  ☐ Implement module dependency tracking
